--- a/index.html
+++ b/index.html
@@ -1176,13 +1176,13 @@
 
                             <div class="form89">
                                 <div class="field89 mb-3">
-                                    <label for="firstname">First name</label>
+                                    <label for="firstname">Full Name</label>
                                     <input class="input89" type="text" id="name" name="name" maxlength="20" required>
                                 </div>
                                 <div class="field89 mb-3">
                                     <label for="email">Mobile</label>
                                     <input class="input89" type="number" id="mobile" name="mobile"
-                                        placeholder="name@website.com" maxlength="12" required>
+                                        placeholder="Mobile No." maxlength="12" required>
                                 </div>
 
                                 <div class="field89 mb-3">
