--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                             <div class="form89">
                                 <div class="field89 mb-3">
                                     <label for="firstname">Full Name</label>
-                                    <input class="input89" type="text" id="name" name="name" maxlength="20" required>
+                                    <input class="input89" type="text" id="name" name="name" maxlength="20" placeholder="Full Name" required>
                                 </div>
                                 <div class="field89 mb-3">
                                     <label for="email">Mobile</label>
