--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                                 </div>
                                 <div class="field89 mb-3">
                                     <label for="email">Mobile</label>
-                                    <input class="input89" type="number" id="mobile" name="mobile"
+                                    <input class="input89 trogers" type="number" id="mobile" name="mobile"
                                         placeholder="Mobile No." maxlength="12" required>
                                 </div>
 
