--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
 
+<style>
+/* Chrome, Safari, Edge, Opera */
+.trogers::-webkit-outer-spin-button,
+.trogers::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+/* Firefox */
+.trogers {
+  -moz-appearance: textfield;
+}
+</style>
 
 </head>
 
